# todoist-car-cover

./: .gitignore  README.md  config.yaml.example  pyproject.toml
todoist_cover_car/: config.py  scheudler.py  weather_api.py  weather_calc.py
