[tool.poetry]
name = "todoist-car-cover"
version = "0.1.0"
description = ""
authors = ["fsc5"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
todoist-api-python = "^1.1.0"
schedule = "^1.1.0"
PyYAML = "^6.0"
attrs = "^21.4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
